<resources>
    <string name="app_name">Finance-Eq</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="caltype">Simple Interest</string>
    <string name="calculate">Calculate</string>
    <string name="labelAmount">Amount</string>
    <string name="labelRate">Rate (%)</string>
    <string name="labelYear">Time</string>
    <string name="ci_labelCompound">Compound (n)</string>
    <string name="ci_lableTime">Time(In Years)</string>
    
    <!-- Loan Calculator -->
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_interest_rate">Interest Rate</string>
    <string name="loan_term">Terms</string>
    <string name="loan_time_frame"></string>
    
</resources>
