<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp" android:padding="0dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_100"
        android:padding="0dp">

        <TextView
            android:id="@+id/txtViewCalType"
            android:text="@string/caltype"
            android:layout_gravity="center"
            style="@style/AppTextViewLarge" />



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                style="@style/AppFormTextView"
                android:text="@string/labelAmount"
                android:id="@+id/txtViewAmount"/>

            <EditText
                style="@style/AppFormEditText"
                android:inputType="number|numberDecimal"
                android:id="@+id/txt_p"
                android:text="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                style="@style/AppFormTextView"
                android:text="@string/labelRate"
                android:id="@+id/txtViewRate"/>

            <EditText
                style="@style/AppFormEditText"
                android:inputType="number|numberDecimal"
                android:id="@+id/txt_r"
                android:text="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">

            <TextView
                style="@style/AppFormTextView"
                android:text="@string/ci_labelCompound"
                android:layout_weight="0.4"
                android:id="@+id/txtv_n" />


            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:id="@+id/spinner_n"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">

            <TextView
                style="@style/AppFormTextView"
                android:text="@string/ci_lableTime"
                android:ems="10"
                android:id="@+id/txtViewYear" />

            <EditText
                style="@style/AppFormEditText"
                android:inputType="number"
                android:id="@+id/txt_t"
                android:text="10" />
        </LinearLayout>




        <Button
            style="@style/AppButton"
            android:text="@string/calculate"
            android:id="@+id/btnCalculate"
            android:layout_gravity="center"/>

        <TextView
            style="@style/AppTextViewLarge"
            android:inputType="text"
            android:id="@+id/txtViewResult"
            android:padding="12dp"
            android:textColor="@color/orange_800"/>

        <TextView
            style="@style/AppTextViewMedium"
            android:id="@+id/txtViewDesc" />


    </LinearLayout>

</ScrollView>